tests/NormalTests/paczka1/small_fuzzy/28217142.err
Error in line 1: A122 A270 54,7
Error in line 11: KBer63X3 A855 34,1
Error in line 14: sygsjB8Ur A855 71,82
Error in line 5: sygsjB8Ur A122 61,9
Error in line 10: 0iI5LD5NyYG A270 72,1
